--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -1,1 +1,24 @@
-
+<!doctype html>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="block" id="form">
+      <h3>Username</h3>
+      <input type="text" class="input" id="username">
+      <h3>Age</h3>
+      <input type="text" class="input" id="age">
+      <br />
+      <input class="button" type="button" value="Add User" id="button">
+    </div> 
+    <div class="block" id="records"> 
+    </div>
+    <div class="popup" id="popup">
+      <header>
+      </header>
+      <p>Error! Invalid Input</p>
+      <input type="button" class="popupbutton" id="popupbutton" value="close">
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
