update user management system

--- a/User Management System/index.html
+++ b/User Management System/index.html
@@ -13,12 +13,13 @@
     </div> 
     <div class="block" id="records"> 
     </div>
-    <div class="popup" id="popup">
+    <div class="popup hidden" id="popup">
       <header>
       </header>
       <p>Error! Invalid Input</p>
       <input type="button" class="popupbutton" id="popupbutton" value="close">
     </div>
+    <div class="overlay hidden"></div>
     <script src="script.js"></script>
   </body>
 </html>
