Added Search Bar

--- a/User Management System/index.html
+++ b/User Management System/index.html
@@ -13,6 +13,10 @@
     </div> 
     <div class="block" id="records"> 
     </div>
+    <div class="search">
+      Search
+      <input type="search"  class="searchbar" id="searchbar">
+    </div>
     <div class="popup hidden" id="popup">
       <header>
       </header>
