--- a/Data tables/index.html
+++ b/Data tables/index.html
@@ -20,6 +20,7 @@
         <br>
         <input class="button" id="button" type="button" value="Submit">
     </div>
+    <input type="text" id="myInput"  placeholder="Search for names.." title="Type in a name" onkeyup="myFunction()">
     <h1>Data Tables</h1>
       <table id="customers" class="customers">
         <tr>
@@ -29,7 +30,7 @@
           <th>Email</td>
         </tr>
       </table>
-    
-    <script src="script.js"></script>
+    <script src="script.js">
+    </script>
   </body>
 </html>
