add searchbar to usermanagement

--- a/Data tables/index.html
+++ b/Data tables/index.html
@@ -20,7 +20,7 @@
         <br>
         <input class="button" id="button" type="button" value="Submit">
     </div>
-    <input type="text" id="myInput"  placeholder="Search for names.." title="Type in a name" onkeyup="myFunction()">
+    <input type="text" id="myInput"  placeholder="Search" title="Type in a name" onkeyup="myFunction()">
     <h1>Data Tables</h1>
       <table id="customers" class="customers">
         <tr>
