--- a/User Management System/index.html
+++ b/User Management System/index.html
@@ -11,12 +11,12 @@
       <br />
       <input class="button" type="button" value="Add User" id="button">
     </div> 
-    <div class="block" id="records"> 
-    </div>
-    <div class="search">
-      Search
-      <input type="search"  class="searchbar" id="searchbar">
-    </div>
+        <input type="text" id="myInput"  placeholder="Search" title="Type in a name" onkeyup="myFunction()">
+    <table id="customers" class="customers">
+        <tr>
+          <th> Name</td>
+          <th>Age</td>
+        </tr>
     <div class="popup hidden" id="popup">
       <header>
       </header>
