--- a/User Management System/index.html
+++ b/User Management System/index.html
@@ -17,6 +17,7 @@
           <th> Name</td>
           <th>Age</td>
         </tr>
+    </table>
     <div class="popup hidden" id="popup">
       <header>
       </header>
