--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -1,22 +1,34 @@
 <!doctype html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="block" id="form">
-      <h3>Username</h3>
-      <input type="text" class="input" id="username">
+      <h3>Name</h3>
+      <input type="text" class="input" id="name">
       <h3>Age</h3>
       <input type="text" class="input" id="age">
       <br />
+      <h3>Income</h3>
+      <input type="text" class="input" id="income">
+      <br>
       <input class="button" type="button" value="Add User" id="button">
     </div> 
+    <section class="data hidden">
+      <input type="button" class="closeuser" id="closeuser" value="Add a person">
         <input type="text" id="myInput"  placeholder="Search" title="Type in a name" onkeyup="myFunction()">
     <table id="customers" class="customers">
         <tr>
           <th> Name</td>
           <th>Age</td>
+          <th>Income</th>
         </tr>
+    </table>
+  </section>
+  <input class="viewbutton" type="button" value="Manage Users" id="viewbutton">
     <div class="popup hidden" id="popup">
       <header>
       </header>
