--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -22,9 +22,11 @@
         <input type="text" id="myInput"  placeholder="Search" title="Type in a name" onkeyup="myFunction()">
     <table id="customers" class="customers">
         <tr>
-          <th> Name</td>
+          <th>Name</td>
           <th>Age</td>
           <th>Income</th>
+          <th>Expense</th>
+          <th>Actions</th>
         </tr>
     </table>
   </section>
