--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -37,9 +37,11 @@
       <input type="text" class="input" id="expenseamount" placeholder="Expense Amount">
       <br />
       <h3></h3>
-      <input type="text" class="input" id="expensedate" placeholder="Expense date">
+      <input type="date" class="input" id="expensedate" placeholder="Expense date">
       <br>
       <input class="button" type="button" value="Add Expense" id="button">
+      <input type="button" class="goback" id="goback" value="Cancel">
+
   </div>
   <input class="viewbutton" type="button" value="Manage Users" id="viewbutton">
     <div class="popup hidden" id="popup">
