--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -39,7 +39,7 @@
       <h3></h3>
       <input type="date" class="input" id="expensedate" placeholder="Expense date">
       <br>
-      <input class="button" type="button" value="Add Expense" id="button">
+      <input  type="button" class="addexpensebutton" value="Add Expense" id="addexpensebutton">
       <input type="button" class="goback" id="goback" value="Cancel">
 
   </div>
