Add persons Array

--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -19,9 +19,10 @@
     </div> 
     <section class="data hidden">
       <input type="button" class="closeuser" id="closeuser" value="Add a person">
-        <input type="text" id="myInput"  placeholder="Search" title="Type in a name" onkeyup="myFunction()">
+        <input type="text" id="myInput"  placeholder="Search" title="Type in a name" onkeyup="dynamicallySearch()">
     <table id="customers" class="customers">
         <tr>
+          <th>ID</td>
           <th>Name</td>
           <th>Age</td>
           <th>Income</th>
