--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -51,6 +51,13 @@
       <p>Error! Invalid Input</p>
       <input type="button" class="popupbutton" id="popupbutton" value="close">
     </div>
+    <table id="Expenses" class="Expenses">
+        <tr>
+          <th>Title</td>
+          <th>Expesne Amount</td>
+          <th>Date</td>
+        </tr>
+    </table>
     <div class="overlay hidden"></div>
     <script src="script.js"></script>
   </body>
