--- a/Single Page Application/index.html
+++ b/Single Page Application/index.html
@@ -51,7 +51,8 @@
       <p>Error! Invalid Input</p>
       <input type="button" class="popupbutton" id="popupbutton" value="close">
     </div>
-    <table id="Expenses" class="Expenses">
+    <table id="Expenses" class="Expenses hidden">
+        <input type="button" class="closeExpense hidden" id="closeExpense" value="Cancel">
         <tr>
           <th>Title</td>
           <th>Expesne Amount</td>
