--- a/Expense manager/index.html
+++ b/Expense manager/index.html
@@ -13,10 +13,10 @@
       <input type="text" class="input" id="age" placeholder="Age">
       <br />
       <h3>Income</h3>
-      <input type="text" class="input" id="income" placeholder="Income">
+      <input type="number" min="0'" class="input" id="income" placeholder="Income">
       <br>
       <input class="addbutton" type="button" value="Add User" id="button">
-      <input type="button" class="back" id="back" value="back">
+      <input type="button" class="back" id="back" value="Back">
     </div> 
     <section class="data">
       <input type="button" class="adduser" id="adduser" value="Add a person">
@@ -41,7 +41,7 @@
       <input type="date" class="input" id="expensedate" placeholder="Expense date">
       <br>
       <input  type="button" class="addexpensebutton" value="Add Expense" id="addexpensebutton">
-      <input type="button" class="goback" id="goback" value="Cancel">
+      <input type="button" class="goback" id="goback" value="Back">
   </div>
     <div class="popup hidden" id="popup">
       <header>
